--- a/Dockerfile-web
+++ b/Dockerfile-web
@@ -1,8 +1,13 @@
-FROM bigpapoo/r5a05-nginx:latest
+FROM bigpapoo/r5a05-node:latest as build-stage
 
 WORKDIR /app
 
+COPY package.*json ./
 RUN npm install
+COPY . .
 RUN npm run build
 
-COPY /dist/* /usr/share/nginx/html/
+FROM bigpapoo/r5a05-nginx:latest
+RUN rm /usr/share/nginx/html/*.html
+
+COPY --from=build-stage build /usr/share/nginx/html
