--- a/Dockerfile-api
+++ b/Dockerfile-api
@@ -3,8 +3,9 @@ FROM bigpapoo/r5a05-node:latest
 WORKDIR /work
 
 COPY package.json ./
+COPY src/server/server.js ./
 
 RUN npm install
 RUN npm install -g pm2
 
-CMD [“pm2-runtime”, “app.js”]
+CMD ["pm2-runtime", "server.js"]
