--- a/Dockerfile-web
+++ b/Dockerfile-web
@@ -8,6 +8,6 @@ COPY . .
 RUN npm run build
 
 FROM bigpapoo/r5a05-nginx:latest
-RUN rm /usr/share/nginx/html/*.html
+RUN rm /usr/share/nginx/html/*
 
-COPY --from=build-stage build /usr/share/nginx/html
+# COPY --from=build-stage dist/* /usr/share/nginx/html
