--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@vitejs/plugin-react-swc": "^3.6.0",
     "cross-env": "^7.0.3",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "mysql2": "^3.9.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "vite-express": "*"
