--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "cross-env": "^7.0.3",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
-    "mysql2": "^3.9.3",
+    "postgres": "^3.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "vite-express": "*"
