--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
-SQL_HOST = 
-SQL_USER = 
-SQL_PASSWORD = 
+SQL_HOST = 'localhost'
+SQL_USER = 'admin'
+SQL_PASSWORD = 'admin'
+SQL_DB = 'db_livre'
+SQL_PORT = '5432'
