--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
     "react-toastify": "^10.0.5",
+    "toastify": "^2.0.1",
     "vite-express": "*"
   },
   "devDependencies": {
