--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 SQL_HOST = 'localhost'
-SQL_USER = 'admin'
+SQL_USER = 'postgres'
 SQL_PASSWORD = 'admin'
-SQL_DB = 'db_livre'
+SQL_DB = 'postgres'
 SQL_PORT = '5432'
