--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "postgres": "^3.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-howler": "^5.2.0",
     "react-router-dom": "^6.22.3",
     "react-toastify": "^10.0.5",
     "toastify": "^2.0.1",
